recursion.lessons.recursion.koch.Koch.scala.error
Koch:14: error: not found: value angle
	droite(angle/levels);
               ^